--- a/javejob/2-1/top1.html
+++ b/javejob/2-1/top1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    <title>Div Puzzle</title><link rel="stylesheet" href="style1.css" href="smartStyle1.css">
+    <link rel="stylesheet" href="smartStyle1.css">
 </head>
 <body>
     <div class="header"></div>
